Update surefire arg line