@@ -5,5 +5,5 @@ if [[ "$MVN_TESTS_DISABLED" == "true" ]]; then
   ./mvnw verify --no-transfer-progress -Djgiven.report.text=false -DskipTests || exit 1
 else
   echo "Building and testing"
-  ./mvnw verify --no-transfer-progress -Djgiven.report.text=false -DsurefireArgLine="-Xmx1024m -XX:MaxPermSize=256m" || exit 1
+  ./mvnw verify --no-transfer-progress -Djgiven.report.text=false || exit 1
 fi
